--- a/BlinForms.Framework/BlinForms.Framework.csproj
+++ b/BlinForms.Framework/BlinForms.Framework.csproj
@@ -3,12 +3,11 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.0.0-preview8.19372.1" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.0.0-preview7.19362.4" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.0.0-preview7.19362.4" />
+    <ProjectReference Include="..\Emblazon\Emblazon.csproj" />
   </ItemGroup>
 
 </Project>
