Add emtpy Blaxamarin.Framework project
- Created appropriate dependencies between projects
- Updated (downgraded, actually) package references to stable versions

--- a/BlaxamarinSample/BlaxamarinSample.iOS/BlaxamarinSample.iOS.csproj
+++ b/BlaxamarinSample/BlaxamarinSample.iOS/BlaxamarinSample.iOS.csproj
@@ -129,7 +129,7 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.2.0.618605-pre2" />
+    <PackageReference Include="Xamarin.Forms" Version="4.1.0.673156" />
     <PackageReference Include="Xamarin.Essentials" Version="1.2.0" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
