--- a/Blaxamarin.Framework/Blaxamarin.Framework.csproj
+++ b/Blaxamarin.Framework/Blaxamarin.Framework.csproj
@@ -7,10 +7,9 @@
 
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="4.1.0.673156" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Blaxamarin.Framework\Blaxamarin.Framework.csproj" />
+    <ProjectReference Include="..\Emblazon\Emblazon.csproj" />
   </ItemGroup>
 </Project>
