Add DI support to Blaxamarin
- Update Blaxamarin TodoApp to use injected AppState to store TodoItems list

--- a/Blaxamarin.Framework/Blaxamarin.Framework.csproj
+++ b/Blaxamarin.Framework/Blaxamarin.Framework.csproj
@@ -10,6 +10,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.2.0.709249" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.0.0-preview9.19423.4" />
   </ItemGroup>
 
   <ItemGroup>
