--- a/Blaxamarin.Framework/Blaxamarin.Framework.csproj
+++ b/Blaxamarin.Framework/Blaxamarin.Framework.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,4 +17,5 @@
   <ItemGroup>
     <ProjectReference Include="..\Emblazon\Emblazon.csproj" />
   </ItemGroup>
+
 </Project>
