--- a/Blaxamarin.Framework/.editorconfig
+++ b/Blaxamarin.Framework/.editorconfig
@@ -2,3 +2,6 @@
 
 # BL0006: Do not use RenderTree types
 dotnet_diagnostic.BL0006.severity = none
+
+# CA1303: Do not pass literals as localized parameters
+dotnet_diagnostic.CA1303.severity = none
