--- a/samples/BlaxamarinSample.Android/BlaxamarinSample.Android.csproj
+++ b/samples/BlaxamarinSample.Android/BlaxamarinSample.Android.csproj
@@ -99,4 +99,7 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
+  <Target Name="Pack">
+    <Message Text="Fake 'Pack' target because Xamarin Android CSharp targets don't have it." />
+  </Target>
 </Project>
