--- a/samples/XamarinFormsTodoXaml/XamarinTodoXaml/XamarinTodoXaml.iOS/XamarinTodoXaml.iOS.csproj
+++ b/samples/XamarinFormsTodoXaml/XamarinTodoXaml/XamarinTodoXaml.iOS/XamarinTodoXaml.iOS.csproj
@@ -129,8 +129,8 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.3.0.778476-pre1" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.2.0" />
+    <PackageReference Include="Xamarin.Forms" Version="4.2.0.848062" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
