--- a/samples/XamarinFormsTodoXaml/XamarinTodoXaml/XamarinTodoXaml/XamarinTodoXaml.csproj
+++ b/samples/XamarinFormsTodoXaml/XamarinTodoXaml/XamarinTodoXaml/XamarinTodoXaml.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.3.0.778476-pre1" />  
-    <PackageReference Include="Xamarin.Essentials" Version="1.2.0" />
+    <PackageReference Include="Xamarin.Forms" Version="4.2.0.848062" />  
+    <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
 </Project>
