Remove strong-name for Blaxamarin.Framework
Because Xamarin.Forms is not strong-name signed

--- a/src/Blaxamarin.Framework/Blaxamarin.Framework.csproj
+++ b/src/Blaxamarin.Framework/Blaxamarin.Framework.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+
+    <!-- Don't strong-name sign this assembly because Xamarin.Forms is not strong-name signed -->
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
 
   <ItemGroup>
