--- a/azure-pipelines/dotnet.yml
+++ b/azure-pipelines/dotnet.yml
@@ -6,13 +6,13 @@ steps:
     restoreNugetPackages: false
     logFileVerbosity: 'minimal' # Optional. Options: quiet, minimal, normal, detailed, diagnostic
     configuration: $(BuildConfiguration)
-    #solution: '**/*.sln' 
+    clean: true
+    solution: 'Emblazon.sln'
     #msbuildLocationMethod: 'version' # Optional. Options: version, location
     #msbuildVersion: 'latest' # Optional. Options: latest, 16.0, 15.0, 14.0, 12.0, 4.0
     #msbuildArchitecture: 'x86' # Optional. Options: x86, x64
     #msbuildLocation: # Optional
     #platform: # Optional
-    #clean: false # Optional
     #maximumCpuCount: false # Optional
     #logProjectEvents: false # Optional
     #createLogFile: false # Optional
