--- a/samples/BlaxamarinSample.Android/BlaxamarinSample.Android.csproj
+++ b/samples/BlaxamarinSample.Android/BlaxamarinSample.Android.csproj
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Target Name="Build" Condition=" '$(SkipOnCI)' == 'true' ">
+    <Message Text="Skipping 'Build' Target" />
+  </Target>
+  
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
