Try to fix AzDO build again
- Remove Android customizations (it won't get built at all, hopefully)
- Use built-in AzDO DotNetCoreCLI task
- Re-enable Linux and macOS builds

--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -14,29 +14,29 @@ jobs:
 
   - template: dotnet.yml
 
-#- job: Linux
-#  pool:
-#    vmImage: Ubuntu 16.04
-#  steps:
-#  - checkout: self
-#    clean: true
-#  - template: install-dependencies.yml
-#  - template: dotnet.yml
-#
-#- job: macOS
-#  pool:
-#    vmImage: macOS 10.13
-#  steps:
-#  - checkout: self
-#    clean: true
-#  - template: install-dependencies.yml
-#  - template: dotnet.yml
+- job: Linux
+  pool:
+    vmImage: Ubuntu 16.04
+  steps:
+  - checkout: self
+    clean: true
+  - template: install-dependencies.yml
+  - template: dotnet.yml
+
+- job: macOS
+  pool:
+    vmImage: macOS 10.13
+  steps:
+  - checkout: self
+    clean: true
+  - template: install-dependencies.yml
+  - template: dotnet.yml
 
 - job: WrapUp
   dependsOn:
   - Windows
- # - Linux
- # - macOS
+  - Linux
+  - macOS
   pool: ${{ parameters.windowsPool }}
   condition: succeededOrFailed()
   steps:
