--- a/azure-pipelines/dotnet.yml
+++ b/azure-pipelines/dotnet.yml
@@ -42,8 +42,7 @@ steps:
 - task: MSBuild@1
   inputs:
     msbuildArguments: /t:pack /p:NoBuild=true
-    projects: src/**/*.csproj # Optional
-    #solution: '**/*.sln' 
+    solution: 'src/**/*.csproj' 
     #msbuildLocationMethod: 'version' # Optional. Options: version, location
     #msbuildVersion: 'latest' # Optional. Options: latest, 16.0, 15.0, 14.0, 12.0, 4.0
     #msbuildArchitecture: 'x86' # Optional. Options: x86, x64
