--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ BenchmarkDotNet.Artifacts/
 project.lock.json
 project.fragment.lock.json
 artifacts/
+!azure-pipelines/artifacts
 
 # StyleCop
 StyleCopReport.xml
