--- a/azure-pipelines/dotnet.yml
+++ b/azure-pipelines/dotnet.yml
@@ -95,6 +95,13 @@ steps:
   displayName: Publish artifacts
   condition: succeededOrFailed()
 
+- task: NuGetCommand@2
+  displayName: 'NuGet push'
+  inputs:
+    command: push
+    publishVstsFeed: 'Emblazon'
+    allowPackageConflicts: true
+
 - task: PublishSymbols@2
   inputs:
     SymbolsFolder: $(Build.ArtifactStagingDirectory)/symbols-Windows
