Set 'pack' build configuration

--- a/azure-pipelines/dotnet.yml
+++ b/azure-pipelines/dotnet.yml
@@ -43,12 +43,12 @@ steps:
   inputs:
     msbuildArguments: /t:pack /p:NoBuild=true
     solution: 'src/**/*.csproj' 
+    configuration: '$(BuildConfiguration)' # Optional
     #msbuildLocationMethod: 'version' # Optional. Options: version, location
     #msbuildVersion: 'latest' # Optional. Options: latest, 16.0, 15.0, 14.0, 12.0, 4.0
     #msbuildArchitecture: 'x86' # Optional. Options: x86, x64
     #msbuildLocation: # Optional
     #platform: # Optional
-    #configuration: # Optional
     #clean: false # Optional
     #maximumCpuCount: false # Optional
     #restoreNugetPackages: false # Optional
