--- a/samples/BlaxamarinSample.Android/BlaxamarinSample.Android.csproj
+++ b/samples/BlaxamarinSample.Android/BlaxamarinSample.Android.csproj
@@ -58,6 +58,7 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.3.0" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TextToSpeech_Android.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
