--- a/samples/BlaxamarinSample.iOS/BlaxamarinSample.iOS.csproj
+++ b/samples/BlaxamarinSample.iOS/BlaxamarinSample.iOS.csproj
@@ -60,6 +60,7 @@
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="TextToSpeech_iOS.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <None Include="Entitlements.plist" />
