--- a/samples/BlazorNativeTodo.iOS/Info.plist
+++ b/samples/BlazorNativeTodo.iOS/Info.plist
@@ -23,15 +23,15 @@
     <key>MinimumOSVersion</key>
     <string>8.0</string>
     <key>CFBundleDisplayName</key>
-    <string>BlaxamarinSample</string>
+    <string>BlazorNativeTodo</string>
     <key>CFBundleIdentifier</key>
-    <string>com.companyname.BlaxamarinSample</string>
+    <string>com.companyname.BlazorNativeTodo</string>
     <key>CFBundleVersion</key>
     <string>1.0</string>
     <key>UILaunchStoryboardName</key>
     <string>LaunchScreen</string>
     <key>CFBundleName</key>
-    <string>BlaxamarinSample</string>
+    <string>BlazorNativeTodo</string>
     <key>XSAppIconAssets</key>
     <string>Assets.xcassets/AppIcon.appiconset</string>
 </dict>
