Add background image and random weather to Weather sample

--- a/samples/BlazorNativeWeather/BlazorNativeWeather.iOS/BlazorNativeWeather.iOS.csproj
+++ b/samples/BlazorNativeWeather/BlazorNativeWeather.iOS/BlazorNativeWeather.iOS.csproj
@@ -130,4 +130,7 @@
       <Name>BlazorNativeWeather</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\spaceneedle.png" />
+  </ItemGroup>
 </Project>
