--- a/samples/BlazorNativeWeather/BlazorNativeWeather.Android/BlazorNativeWeather.Android.csproj
+++ b/samples/BlazorNativeWeather/BlazorNativeWeather.Android/BlazorNativeWeather.Android.csproj
@@ -84,14 +84,15 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\drawable\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\BlazorNativeWeather\BlazorNativeWeather.csproj">
       <Project>{6FAD20B5-A708-4CD9-84F0-A1009376B2AE}</Project>
       <Name>BlazorNativeWeather</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\spaceneedle.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
