Move Todo Sample to a common parent folder
- Same way as the other samples

--- a/samples/BlazorNativeTodoSample/BlazorNativeTodo/BlazorNativeTodo.csproj
+++ b/samples/BlazorNativeTodoSample/BlazorNativeTodo/BlazorNativeTodo.csproj
@@ -12,6 +12,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Microsoft.Blazor.Native\Microsoft.Blazor.Native.csproj" />
+    <ProjectReference Include="..\..\..\src\Microsoft.Blazor.Native\Microsoft.Blazor.Native.csproj" />
   </ItemGroup>
 </Project>
