Update package metadata
Fixes #18

--- a/src/BlinForms.Framework/BlinForms.Framework.csproj
+++ b/src/BlinForms.Framework/BlinForms.Framework.csproj
@@ -3,6 +3,10 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
+
+    <Title>Blazor for Windows Forms (experimental)</Title>
+    <Description>Blazor for Windows Forms enables using Blazor syntax in .razor files to build Windows Forms apps running on .NET Core.</Description>
+    <PackageTags>blazor;blazor-native;windows-forms;windowsforms;winforms</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
