--- a/src/Microsoft.Blazor.Native/Microsoft.Blazor.Native.csproj
+++ b/src/Microsoft.Blazor.Native/Microsoft.Blazor.Native.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Title>Blazor Native for Xamarin.Forms (experimental)</Title>
-    <Description>Blazor Native enables using Blazor syntax in .razor files to build native apps for iOS and Android.</Description>
+    <Title>Experimental Forms binding for Blazor</Title>
+    <Description>Experimental Forms binding for Blazor enables using Blazor syntax in .razor files to build native apps for iOS and Android.</Description>
     <PackageTags>blazor;blazor-native</PackageTags>
 
     <!-- Don't strong-name sign this assembly because Xamarin.Forms is not strong-name signed -->
