--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -1,3 +1,26 @@
+variables:
+- name: DOTNET_SKIP_FIRST_TIME_EXPERIENCE
+  value: true
+- name: _TeamName
+  value:  Emblazon
+
+- ${{ if ne(variables['Build.Reason'], 'PullRequest') }}:
+  - name: _BuildArgs
+    value: /p:TeamName=$(_TeamName)
+  - name: _SignType
+    value: real
+
+- ${{ if eq(variables['Build.Reason'], 'PullRequest') }}:
+  - name: _BuildArgs
+    value: ''
+  - name: _SignType
+    value: test
+  - name: _PublishArgs
+    value: ''
+
+
+
+
 parameters:
   windowsPool: Hosted Windows 2019 with VS2019
 
@@ -32,11 +55,30 @@ jobs:
 #  - template: install-dependencies.yml
 #  - template: dotnet.yml
 
-- job: WrapUp
+- job: CodeSign
   dependsOn:
   - Windows
  # - Linux
  # - macOS
+  pool: ${{ parameters.windowsPool }}
+  condition: succeededOrFailed()
+  steps:
+  - task: MicroBuildSigningPlugin@2
+    inputs:
+      signType: $(_SignType)
+      feedSource: 'https://devdiv.pkgs.visualstudio.com/DefaultCollection/_packaging/MicroBuildToolset/nuget/v3/index.json'
+    continueOnError: false
+    env:
+      TeamName: $(_TeamName)
+  - task: MicroBuildCodesignVerify@2
+    inputs:
+      TargetFolders: '$(Build.StagingDirectory)'
+      ExcludeSNVerify: true
+  - task: MicroBuildCleanup@1
+
+- job: WrapUp
+  dependsOn:
+  - CodeSign
   pool: ${{ parameters.windowsPool }}
   condition: succeededOrFailed()
   steps:
