--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ variables:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
   BuildConfiguration: Release
   BuildPlatform: Any CPU
-  #ci_feed: # find guid used by Azure DevOps Artifacts for the feed
+  ci_feed: 'Emblazon'
   NUGET_PACKAGES: $(Agent.TempDirectory)/.nuget/packages
 
 jobs:
