--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -3,6 +3,27 @@ parameters:
 
 jobs:
 - job: Windows
+
+  variables:
+  - name: DOTNET_SKIP_FIRST_TIME_EXPERIENCE
+    value: true
+  - name: _TeamName
+    value:  Emblazon
+
+  - ${{ if ne(variables['Build.Reason'], 'PullRequest') }}:
+    - name: _BuildArgs
+      value: /p:TeamName=$(_TeamName)
+    - name: _SignType
+      value: real
+
+  - ${{ if eq(variables['Build.Reason'], 'PullRequest') }}:
+    - name: _BuildArgs
+      value: ''
+    - name: _SignType
+      value: test
+    - name: _PublishArgs
+      value: ''
+
   pool: ${{ parameters.windowsPool }}
   steps:
   - checkout: self
