--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -17,4 +17,13 @@
   <ItemGroup>
     <PackageReference Include="Nerdbank.GitVersioning" Version="3.0.25" PrivateAssets="all" />
   </ItemGroup>
+
+  <ItemGroup>
+      <FilesToSign Include="$(OutDir)\**\*.dll">
+          <Authenticode>Microsoft400</Authenticode>
+      </FilesToSign>
+      <FilesToSign Include="$(OutDir)\**\*.nupkg">
+          <Authenticode>NuGet</Authenticode>
+      </FilesToSign>
+  </ItemGroup>
 </Project>
